Fixed dark mode formulas

--- a/src/components/blendingmodes/BlendingModes.css
+++ b/src/components/blendingmodes/BlendingModes.css
@@ -7,3 +7,7 @@
     scale: 1.2;
     transform-origin: left top;
 }
+
+.dark {
+    background:rgb(122, 122, 122)
+}
